# chip-8

./: Cargo.toml  README.md  rustfmt.toml
assets/: display.wgsl
src/: chip8.rs  chip8_display.rs  main.rs  tests.rs
